# panoramai

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  render.yaml  start.sh
.github/workflows/: deploy.yml
backend/: Dockerfile  buildspec.yml  database.py  entrypoint.sh  main.py  railway.json  requirements.txt
backend/competitive_mcp/: __init__.py  db.py  server.py
backend/core/: auth.py  config.py  features.py  langfuse_client.py  mcp_auth.py  mcp_context.py  permissions.py  retailers_db.py  sectors.py  trends.py  utils.py
backend/models/: schemas.py
backend/routers/: __init__.py  admin.py  ads_overview.py  advertiser.py  appstore.py  aso.py  auth.py  brand.py  competitors.py  creative_analysis.py  enrichment.py  ereputation.py  facebook.py  freshness.py  geo.py  geo_tracking.py  google_ads.py  google_trends_news.py  gsc.py  instagram.py  layers.py  market_data.py  mcp_keys.py  meta_ads.py  moby.py  playstore.py  seo.py  (+9 more)
competitive-mcp/: pyproject.toml
competitive-mcp/src/competitive_mcp/: db.py  formatting.py  server.py
competitive-mcp/src/competitive_mcp/tools/: __init__.py  ads.py  creative.py  dashboard.py  signals.py  social.py  stores.py
competitive-mcp/tests/: conftest.py  test_tools.py
frontend/: .env.production.check  .env.production.local  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
infra/: alb.tf  backend-dev.hcl  backend-prod.hcl  dev.tfvars  dns.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  prod.tfvars  rds.tf  s3.tf  security_groups.tf  ssm.tf  variables.tf  vpc.tf
(+154 files in other folders)
