[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "competitive-mcp"
version = "0.1.0"
description = "Serveur MCP pour la veille concurrentielle — expose les données à Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sqlalchemy>=2.0.25",
]

[project.scripts]
competitive-mcp = "competitive_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/competitive_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
